# weather-cli

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  weather.rs
