[package]
name = "weather-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
reqwest = {version = "0.11",features = ["json"]}
tokio = {version = "1",features = ["full"]}
chrono = { version = "0.4", features = ["serde"] }